src/components/Hero.css
#my-hero {
    background-color: olive;
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/hopsandvines.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    height: 800px;
    padding: 25px;
    width: 100vw;

    color: white;
}

.ui.container {
    height: 750px;
    display: flex;
    flex-direction: column;

    margin: 0!important;
}

/* .main-header {
    display: flex;

    flex-direction: row;
    justify-content: space-between;
    align-items: center;
} */

.address,
.logo,
.social,
.address a {
    color: white;
    font-size: 18px;
    line-height: 26px;
    margin: 0;
}

/* .address {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.logo {
    display: flex;

    align-self: center;
}

.social {
    display: flex;
    flex-direction: column;
} */

.map-pin-icon,
.phone-icon {
    height: 1em;
    width: 1em;
    margin-right: 4px;
}

.hops-and-vines-logo {
    height: 8.33em;
}

.facebook-logo,
.untappd-logo,
.yelp-logo {
    margin: 7.5px;
}

/* .welcome-section {
    display: flex;
    flex-direction: column;
    align-items: center;
} */

.welcome-message {
    font-size: 2.5em;
    line-height: 2.11em;
    letter-spacing: .05em;
    text-align: center;
    padding-top: 125px;
}

.glass-grapes {
    align-items: center;
}

.glass {
    margin: 10px 7.5px 10px 0;
    height: 1.5em;
}

.grapes {
    margin: 10px 0 10px 7.5px;
    height: 1.5em;
}

.located {
    font-size: 1.25em;
    line-height: 1.75em;
}

/* .mouse-row {
    height: 50px;
} */

.mouse-div {
    display: flex;
    flex-direction: row;
    flex-grow: 1; 
    align-items: flex-end;
    justify-content: center;
}

.mouse {
    height: 2.75em;
    color: black;
}

